--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,15 @@ footer {
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
+    margin: 0;
 }
 
 .row-content {
     padding: 50px;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.navbar {
+    background-color: #901CAD;
 }
